--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>BMW Motos</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img id="logo" src="/img/logo.png" alt="Logo BMW Motos">
+            <img id="logo" src="img/logo.png" alt="Logo BMW Motos">
         </div>
         <div>
             <a id="test-drive" href="#">Test Drive</a>
@@ -32,6 +32,6 @@
             <div id="preto"></div>
         </div>
     </main>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
